wallet in shopuser is increase or decrease when product coin is bought, check config

--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -1,1 +1,2 @@
 bayday.coin_currency.validator.message: The value {{ value }} is not valid.
+bayday.coin_currency.greater_than_zero.message: Not possible having a below zero value.
