--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -1,2 +1,5 @@
-bayday.coin_currency.validator.message: The value {{ value }} is not valid.
-bayday.coin_currency.greater_than_zero.message: Not possible having a below zero value.
+bayday:
+  coin_currency:
+    coin: The value {{ value }} is not valid.
+    greater_then_zero: Not possible having a below zero value.
+    wallet_fulfilled: Your wallet is not fulfilled enough.
